# after_effects_cmake

./: PyFX.config  ReadMe.md
AE/Template/Skeleton/: CMakeLists.txt  Skeleton.cpp  Skeleton.h  SkeletonPiPL.r
AE/Template/Skeleton/Win/: Skeleton.vcxproj  Skeleton.vcxproj.filters  SkeletonPiPL.rc
AE/Template/Skeleton/Win/x64/Debug/: Skeleton.aex.recipe  Skeleton.exp  SkeletonPiPL.res  SkeletonPiPL.rr  SkeletonPiPL.rrc
AE/Template/Skeleton/Win/x64/Debug/Skeleton.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Skeleton.lastbuildstate  bscmake.command.1.tlog  bscmake.read.1.tlog  bscmake.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
AE/Template/Skeleton/Win/x64/Release/: AEGP_SuiteHandler.sbr  MissingSuiteError.sbr  SkeletonPiPL.rr  SkeletonPiPL.rrc
AE/Template/Skeleton/Win/x64/Release/Skeleton.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Skeleton.lastbuildstate
example/: build.py
example/ExamplePlugin/: render.py
python/After_Effects/: __init__.py  build.py  parameters.py  plugin.py  utils.py
